syntax = "proto3";
package link;

// LinkInfo contains information about a link.
message LinkInfo {
  // UUID is a host-transport-unique UUID of the link.
  uint64 uuid = 1;
  // TransportUUID is a host-unique UUID of the transport.
  uint64 transport_uuid = 2;
  // Routable indicates if the link is routable or not.
  bool routable = 3;
  // RemotePeerID is the identifier of the remote peer.
  bytes remote_peer_id = 4;
  // Data contains link specific data.
  // Example: remote IP address and port.
  bytes data = 5;
}
